force-app/main/default/objects/Prospect__c/fields/IsQualified__c.field-meta.xml
<CustomField>
    <fullName>IsQualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsQualified</label>
    <type>Checkbox</type>
</CustomField>