force-app/main/default/objects/Prospect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Visa_Type__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>